--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h5{
 .image{
   text-align: center;
   padding-top: 10px;
-  margin-left: 50%;
-  margin-right: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
   }
