--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ width:50%
 }
 h1{
   text-align: center;
-  font-size: 84px;
+  font-size: 84%;
   color:white;
 
 }
@@ -41,13 +41,13 @@ text-align: center;
 padding-top: 100px;
 margin-left: auto;
 margin-right: auto;
-width:1024px;
-font-size: 20px;
+width:100%;
+font-size: 20%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 40px;
+font-size: 40%;
 color:black;
 font-style: bold;
 }
@@ -59,7 +59,7 @@ opacity:0.5;
 footer{
 background-color: rgba(128, 128, 128, 0.322);
 text-align: center;
-font-size: 30px;
+font-size: 30%;
 color:black;
 font-style: bold;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -77,7 +77,7 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   padding-left: 30%;
   padding-right: 25%;
-  margin: 10px;
+  margin: 10%;
   align-items: center;
   text-align: center;
 }
