--- a/style.css
+++ b/style.css
@@ -39,15 +39,15 @@ h1{
 section{
 text-align: center;
 padding-top: 100%;
-margin-left: auto;
-margin-right: auto;
-width:100%;
-font-size: 20%;
+margin-left: 25%;
+margin-right: 35%;
+width:50%;
+font-size: 40%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 40%;
+font-size: 60%;
 color:black;
 font-style: bold;
 }
@@ -59,7 +59,7 @@ opacity:0.5;
 footer{
 background-color: rgba(128, 128, 128, 0.322);
 text-align: center;
-font-size: 30%;
+font-size: 40%;
 color:black;
 font-style: bold;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
