--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ h1{
 }
 section{
 text-align: center;
-padding-top: 100%;
-margin-left: 25%;
-margin-right: 35%;
-width:50%;
+padding-top: 100px;
+margin-left: 25px;
+margin-right: 35px;
+width:100%;
 font-size: 40%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
