--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h2{
   color:green;
 }
 header{
-height: 50%;
+height: 50px;
 background-color:rgb(5, 5, 5);
 }
 main{
@@ -32,7 +32,7 @@ width:50%
 }
 h1{
   text-align: center;
-  font-size: 84%;
+  font-size: 84px;
   color:white;
 
 }
@@ -42,12 +42,12 @@ padding-top: 100px;
 margin-left: 25px;
 margin-right: 35px;
 width:100%;
-font-size: 40%;
+font-size: 30px;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 60%;
+font-size: 40px;
 color:black;
 font-style: bold;
 }
@@ -59,7 +59,7 @@ opacity:0.5;
 footer{
 background-color: rgba(128, 128, 128, 0.322);
 text-align: center;
-font-size: 40%;
+font-size: 35px;
 color:black;
 font-style: bold;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
