--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@ body{
   background-image:url(gradient.jpeg);
   background-size:cover;
   background-position: center;
+  font-size:120%;
   
 
 
 
 h2{
-  color:white;}
+  color:white;
+  text-align:center;
+  margin-left:25%
+  margin-right:25%}
 .ai{
   color:green;
+  text-align:center;
 }
 header{
 height: 50px;
@@ -32,22 +37,22 @@ width:50%
 }
 h1{
   text-align: center;
-  font-size: 84px;
+  font-size: 84%;
   color:white;
 
 }
 section{
 text-align: center;
-padding-top: 100px;
+padding-top: 50px;
 margin-left: 25px;
 margin-right: 35px;
 width:100%;
-font-size: 30px;
+font-size: 30%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 40px;
+font-size: 40%;
 color:black;
 font-style: bold;
 }
@@ -59,7 +64,7 @@ opacity:0.5;
 footer{
 background-color: rgba(128, 128, 128, 0.322);
 text-align: center;
-font-size: 35px;
+font-size: 35%;
 color:black;
 font-style: bold;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
