--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ h1{
 section{
 text-align: center;
 padding-top: 50px;
-margin-left: 25px;
-margin-right: 35px;
+margin-left: 25%;
+margin-right: 35%;
 width:100%;
 font-size: 30%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
