--- a/style.css
+++ b/style.css
@@ -46,10 +46,10 @@ h1{
 section{
 text-align: center;
 padding-top: 50px;
-margin-left: 25%;
-margin-right: 35%;
+margin-left: auto;
+margin-right: auto;
 width:100%;
-font-size: 30%;
+font-size: 300%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
