--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
   background-image:url(gradient.jpeg);
   background-size:cover;
   background-position: center;
-  font-size:120%;
+  font-size:50px;
   width:100%;
 
   
@@ -39,7 +39,7 @@ width:50%
 }
 h1{
   text-align: center;
-  font-size: 84%;
+  font-size: 50px;
   color:white;
 
 }
@@ -49,7 +49,7 @@ padding-top: 50px;
 margin-left: auto;
 margin-right: auto;
 width:100%;
-font-size: 300%;
+font-size: 50px;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -66,7 +66,7 @@ opacity:0.5;
 footer{
 background-color: rgba(128, 128, 128, 0.322);
 text-align: center;
-font-size: 55%;
+font-size: 50px;
 color:black;
 font-style: bold;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
