--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 1200%;
+font-size: 50px;
 color:black;
 font-style: bold;
 }
