--- a/style.css
+++ b/style.css
@@ -13,12 +13,10 @@ body{
 
 h2{
   color:white;
-  margin-left:25%;
-  margin-right:25%;
-  text-align:center;}
+}
 .ai{
-  color:green;
-  text-align:center;
+  color: green;
+;
 }
 header{
 height: 50 px;
