--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 50 px;
+font-size: 100%;
 color:black;
 font-style: bold;
 }
