--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ main{
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 color: rgb(0, 0, 0);
 text-align: center;
+margin-left: auto;
+margin-right: auto;
 
 
 }
@@ -37,7 +39,7 @@ width:50%
 }
 h1{
   text-align: center;
-  font-size: 50 px;
+  font-size: 70 px;
   margin-left: auto;
   margin-right: auto;
   color:white;
