--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ margin-right: 25%;
 width:50%
 }
 h1{
+  padding-top: 50%;
   text-align: center;
-  font-size: 70 px;
+  font-size: 100%;
 
   color:white;
 
