--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ h1{
 }
 section{
 text-align: center;
-padding-top: 50 px;
+padding-top: 25px;
 margin-left: auto;
 margin-right: auto;
 width:100%;
-font-size: 50 px;
+font-size: 100%;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
