--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 h4{
 font-size: 100%;
+width: 100%;
 color:black;
 font-style: bold;
 }
