--- a/style.css
+++ b/style.css
@@ -58,8 +58,10 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 h4{
-font-size: 100%;
-width: 100%;
+margin-left: 25%;
+margin-right: 25%;
+width: 50%;
+font-size: 150%;
 color:black;
 font-style: bold;
 }
