--- a/style.css
+++ b/style.css
@@ -97,5 +97,8 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 10px;
     
 }
+.aboutText{
+  color: white;
+}
 
 }
