--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .aboutText{
   color: white;
+  text-align: center;
+  font-size: 150%;
   width: 80%;
 }
 
