--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section div h2{
   color: white;
   font-size: 1.5rem;
   text-decoration: none;
-  background-color: rgb(243, 171, 54);
+  background-color: #70aec8;
   padding: 1px 32px;
   margin: 4px 2px;
   cursor: pointer;
