--- a/style.css
+++ b/style.css
@@ -252,12 +252,12 @@ li a:hover:not(.active) {
 
 
 .aboutImage{
+  border-radius: 50%;
   padding-top: 10%;
   align-items: center;
   margin-left: 25%;
   margin-right: 25%;
-  height: 30%;
-  width: 20%;
+
 }
 .names
 {
