--- a/experience.css
+++ b/experience.css
@@ -109,7 +109,7 @@ li a:hover:not(.active) {
     }
     
     body {
-      background-color: #474e5d;
+      background-color: #70aec8;
       font-family: 'Calibri', 'Trebuchet MS', sans-serif, sans-serif;
     }
     
