--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -167,6 +167,7 @@ body{
     }
     .arnoldImage{
         margin-left:25%;
+        margin-right:25%;
         align-items: center;
         padding-top: 5%;
 
