--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -145,6 +145,7 @@ body{
       width: 80%;
       margin-left: 10%;
       margin-right: 10%;
+      text-decoraction:none;
     }
     h2{
       text-align: center;
@@ -153,6 +154,7 @@ body{
     h4{
       text-align:center;
     }
+
     .floatImage{
       float:right;
       margin-right:15%;
@@ -160,6 +162,16 @@ body{
       width: rem;
       padding-bottom: 3%;
       }
+    @media screen and (max-width: 950px) {
+    .floatImage{
+      align-items: center;
+      margin-left:15%;
+      padding-top:5%;
+      width:70%;
+      height:50%;
+      padding-bottom:5%;;
+    }
+    }
     .centerImage{
       align-items: center;
       margin-left:15%;
