--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -162,7 +162,7 @@ body{
       align-items: center;
       margin-left:15%;
       padding-top:5%;
-      width:70%;
+      width:50%;
       height:50%;
       padding-bottom:5%;
     }
@@ -170,8 +170,8 @@ body{
     .floatImage{
       float:right;
       margin-right:15%;
-      height: 20rem;
-      width: rem;
+      height: 50%;
+      width: 50%;
       padding-bottom: 3%;
       }
     }
