--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -170,8 +170,8 @@ body{
     .floatImage{
       float:right;
       margin-right:15%;
-      height: 50%;
-      width: 50%;
+      height: 15rem;
+      width: rem;
       padding-bottom: 3%;
       }
     }
