--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -165,7 +165,7 @@ body{
       width:50%;
       height:50%;
       padding-bottom:5%;
-    }
+    })
     .floatImage{
       float:right;
       margin-right:15%;
