--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -166,6 +166,7 @@ body{
       height:50%;
       padding-bottom:5%;
     })
+    @media screen and (min-width: 1050px){
     .floatImage{
       float:right;
       margin-right:15%;
@@ -173,6 +174,7 @@ body{
       width: rem;
       padding-bottom: 3%;
       }
+    }
     
     .centerImage{
       align-items: center;
