--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -6,6 +6,7 @@ text-indent: -3em;
 margin-left: 3em;
 width:60%;
 margin-right:10%;
+font-size: 50%;
 } 
 body{
     background-color: rgb(255, 255, 255);
