--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -177,6 +177,26 @@ body{
       padding-bottom: 3%;
       }
     }
+
+    /* This is for the certainty graphs */
+        @media screen and (max-width: 1050px) {
+    .certainty{
+      align-items: center;
+      margin-left:25%;
+      padding-top:5%;
+      width:70%;
+      height:70%;
+      padding-bottom:5%;
+    }}
+    @media screen and (min-width: 1051px){
+    .certainty{
+      float:right;
+      margin-right:15%;
+      height: 20rem;
+      width: rem;
+      padding-bottom: 3%;
+      }
+    }
     
     .centerImage{
       align-items: center;
