--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -193,7 +193,7 @@ body{
       float:right;
       margin-right:15%;
       height: 20rem;
-      width: rem;
+      width: .75rem;
       padding-bottom: 3%;
       }
     }
