--- a/tumorDetection.css
+++ b/tumorDetection.css
@@ -188,12 +188,21 @@ body{
       height:70%;
       padding-bottom:5%;
     }}
-    @media screen and (min-width: 1150px){
+    @media screen and (min-width: 1150px) and (max-width: 1300px){
     .certainty{
       float:right;
       margin-right:15%;
       height: 20rem;
       width: 30rem;
+      padding-bottom: 3%;
+      }
+    }
+    @media screen and (min-width: 1300px){
+    .certainty{
+      float:right;
+      margin-right:15%;
+      height: 20rem;
+      width: 40rem;
       padding-bottom: 3%;
       }
     }
