--- a/boredomBlog.css
+++ b/boredomBlog.css
@@ -1,63 +1,7 @@
 
 
 /* This is for the animation after the logo */
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900&display=swap');*
-{
-  margin: 0;
-  padding: 0;
-}
-section{
-  padding-top: 10%;
-  position: relative;
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  overflow: hidden;
-}
-section div
-{
-  position: relative;
-  width: 50%;
-  background: #70aec8;
-  overflow: hidden;
 
-}
-section div:nth-child(1)
-{
-  position: relative;
-  width: 50%;
-  background: url(MountainPhoto.jpg);
-  background-size: cover;
-  overflow: hidden;
-
-}
-section div:nth-child(1) h2{
-  -webkit-text-stroke: 2px;
-  -webkit-text-stroke-color: white;
-  -webkit-text-fill-color: transparent;
-  left: 100%;
-  color: #fff;
-}
-section div h2{
-  position: absolute;
-  white-space: nowrap;
-  font-size: 6em;
-  line-height: 50vh; 
-  animation: animate 15s linear infinite;
-  color: white;
-}
-@keyframes animate
-{
-  0%
-  {
-    transform: translateX(0);
-  }
-  100%
-  {
-    transform: translateX(-100%);
-  }
-
-}
 
 .button{
   padding-top:10%;
@@ -73,23 +17,6 @@ section div h2{
   
 }
 
-.section2{
-  color: white;
-  padding-top: 10%;
-  position: relative;
-  width: 100%;
-  height: 70vh;
-  display: flex;
-  overflow: hidden;
-}
-.section2 div
-{
-  position: relative;
-  width: 50%;
-  background:  #70aec8;
-  overflow: hidden;
-
-}
 
 
 body{
@@ -112,12 +39,17 @@ body{
   background-color: blue;
  }
 main{
+  color: rgb(237, 181, 75);
   text-align: center;
 
 
 }
 
-
+.photo{
+  margin-left: 25%;
+  margin-right: 25%;
+  text-align: center;
+}
 
 .image-container {
   position: relative;
@@ -139,16 +71,7 @@ main{
   width:95%;
   font-size: 1.25rem;
 }
-@media screen and (max-width: 950px) {
-  .overlay-text {
-    padding-top:10%;
-    text-align:center;
-    color: #000000; 
-    width:95%;
-    font-size: 1.25rem;
 
-  }
-}
 
 /*Adjusts font size based on screen size*/
 
@@ -245,19 +168,6 @@ li a:hover:not(.active) {
   background-color: #111;
 }
 
-
-.aboutImage{
-  height: 30%;
-  width: 30%;
-  border-radius: 50%;
-  padding-top: 10%;
-  align-items: center;
-  margin-left: 25%;
-  margin-right: 25%;
-
-
-}
-
 .active {
   background-color: #70aec8;
 }
@@ -277,23 +187,11 @@ li a:hover:not(.active) {
              
           
             }
-        
-        
-        
-            /* For the Home Personal Image */
-            @media screen and (max-width: 950px) {
-              .meetTheTeam {
-                margin-left: 15%;
-                margin-right: 25%;
-                text-align: left;
-                color: #000000; 
-                width:70%;
-                font-size: .9rem;
+      
+
             
-              }
 
-
-            }
+            
             
 footer{
               background-color: rgb(255, 255, 255);
@@ -305,4 +203,80 @@ footer{
     }
 
 
+}
+.link{
+  font-size:1.17em;
+  color:black;
+  font-weight:bold;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Add a gray background color with some padding */
+body {
+  font-family: Arial;
+  padding: 20px;
+  background: #f1f1f1;
+}
+
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  font-size: 40px;
+  text-align: center;
+  background-image: url('blueGradient.jpg');
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  height:100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+   background-color: white;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 650px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
 }
