--- a/boredomBlog.css
+++ b/boredomBlog.css
@@ -245,7 +245,13 @@ body {
 
 /* Fake image */
 .fakeimg {
-  background-color: #aaa;
+  background-image: url('blueGradient.jpg');
+  width: 100%;
+  height:100%;
+  padding: 20px;
+}
+.pixelsToProgImage {
+  background-image: url('MRIBanner.webp');
   width: 100%;
   height:100%;
   padding: 20px;
