--- a/boredomBlog.css
+++ b/boredomBlog.css
@@ -245,7 +245,7 @@ body {
 
 /* Fake image */
 .fakeimg {
-  background-image: url('blueGradient.jpg');
+  background-image: url('SinclairPic.jpg');
   width: 100%;
   height:100%;
   padding: 20px;
