--- a/boredomBlog.css
+++ b/boredomBlog.css
@@ -257,7 +257,7 @@ body {
   padding: 20px;
 }
 .chaosImage {
-  background-image: url('chaosTheoryBanner.png');
+  background-image: url('chaosTheoryBanner.webp');
   width: 100%;
   height:100%;
   padding: 20px;
