--- a/pendulum.css
+++ b/pendulum.css
@@ -53,6 +53,9 @@ body{
           padding-left:0%;
           
         }
+        .cancelBox{
+          display:none;
+        }
 
       }
       h2{
@@ -91,6 +94,23 @@ body{
         opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
         -webkit-transition: .2s; /* 0.2 seconds transition on hover */
         transition: opacity .2s;
+      }
+      @media screen and (max-width: 800px) {
+
+          .slider{
+            height: 3rem;
+
+          }
+          .slidercontainer{
+            width:90%;
+          }
+          h3{
+            font-size: 30px;
+          }
+          p{
+            font-size: 25px;
+          }
+
       }
       
       /* Mouse-over effects */
