--- a/CubeScramble.css
+++ b/CubeScramble.css
@@ -131,7 +131,7 @@
             background-color: rgb(255, 255, 255);
             background-position: center;
             font-family:'Calibri', 'Lucida Grande', sans-serif;
-            background-image: url("blueGradient.jpg");
+            background-image: url("Images/blueGradient.jpg");
             background-size:cover;
             background-repeat: no-repeat;
     
