--- a/Blog/chaosTheory.css
+++ b/Blog/chaosTheory.css
@@ -267,6 +267,12 @@
             padding-top:2%;
             padding-bottom:2%;
           }
+          .padding-top{
+            padding-top:3%;
+          }
+          .padding-bottom{
+            padding-bottom: 3%;
+          }
 
     
     }
