--- a/Blog/boredomBlog.css
+++ b/Blog/boredomBlog.css
@@ -263,7 +263,7 @@ body {
   padding: 20px;
 }
 .chaosImage {
-  background-image: url('../Images/chaosTheoryBanner.webp');
+  background-image: url('../Images/lorenzBanner.jpg');
   width: 100%;
   height:100%;
   padding: 20px;
