--- a/Blog/chaosTheory.css
+++ b/Blog/chaosTheory.css
@@ -5,7 +5,9 @@
     margin-left: 3em;
     width:60%;
     margin-right:10%;
-    font-size: 50%;
+    font-size: 100%;
+    padding-top:1%;
+    padding-bottom:1%;
     } 
     body{
 
