--- a/Blog/chaosTheory.css
+++ b/Blog/chaosTheory.css
@@ -5,10 +5,21 @@
     margin-left: 3em;
     width:60%;
     margin-right:10%;
-    font-size: 100%;
+    font-size: 10px;
     padding-top:1%;
     padding-bottom:1%;
-    } 
+    }
+    .indent{
+      text-indent: 3em;
+      font-size:10px;
+    }
+    @media screen and (max-width: 880px) {
+      .hang{
+        padding-left:10%;
+      }
+      
+    
+      }
     body{
 
       background-position: center;
