--- a/Blog/boredomBlog.css
+++ b/Blog/boredomBlog.css
@@ -268,6 +268,12 @@ body {
   height:100%;
   padding: 20px;
 }
+.scholarImage {
+  background-image: url('../Images/Banner_GoogleScholar.jpg');
+  width: 100%;
+  height:100%;
+  padding: 20px;
+}
 
 /* Add a card effect for articles */
 .card {
